--- a/sets.html
+++ b/sets.html
@@ -31,7 +31,7 @@
 <div class="toclist"><ul>
  	<li class="tocprev">&laquo; <a href="join.html">Relational Joins</a></li>
 	<li class="tocmiddle"><a href="index.html">Contents</a></li>
-    <li class="tocnext">&nbsp;</li></ul>
+    <li class="tocnext"><a href="segreduce.html">Segmented Reduction</a> &raquo;</li></ul>
 </div><br/>
 <h1>Multisets</h1>
 <p>Replace Merge Path partitioning with the sophisticated Balanced Path to search for key-rank matches. The new partitioning strategy is combined with four different serial set operations to support CUDA analogs of&nbsp;std::set_intersection,&nbsp;set_union,&nbsp;set_difference, and set_symmetric_difference.</p>
@@ -1235,7 +1235,7 @@ MGPU_LAUNCH_BOUNDS void KernelSetOp(KeysIt1 aKeys_global, ValsIt1 aVals_global,
 <br /><div class="toclist"><ul>
  	<li class="tocprev">&laquo; <a href="join.html">Relational Joins</a></li>
 	<li class="tocmiddle"><a href="index.html">Contents</a></li>
-    <li class="tocnext">&nbsp;</li></ul>
+    <li class="tocnext"><a href="segreduce.html">Segmented Reduction</a> &raquo;</li></ul>
 </div><br />
 </body>
 </html>
