--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 <p><em><strong>Modern GPU is code and commentary intended to promote new and productive ways
 of thinking about GPU computing.</strong></em></p>
 <p>This project is a<strong> library</strong>, an <strong>algorithms book</strong>, a <strong>tutorial</strong>, and a <strong>best-practices guide</strong>. If you are new to CUDA, start <a href="faq.html#gettingstarted">here</a>. If you're already familiar with CUDA, are ready for a challenge, and want to learn design patterns for parallel programming, enjoy this series.</p>
+<p><a href="cascon.pptx">Turning the Crank on Streaming Algorithms</a> presentation for <a href="https://www-927.ibm.com/ibm/cas/cascon/">IBM CASCON 2013</a>.</p>
 <p><a href="breaking.html">Notes on breaking changes</a>.</p>
 <ol class="contents" start='14'>
 	<li>
