Made index.html redirect to github project page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type" />
+  <meta http-equiv="refresh" content="0;url=https://github.com/nvlabs/moderngpu">
   <title>Modern GPU</title>
   <link href="mgpu.css" rel="stylesheet" type="text/css" />
   <script src="syntaxhighlighter_3.0.83/scripts/shCore.js" type="text/javascript"></script>
