Removed redirect and provided link to mgpu2.0

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type" />
-  <meta http-equiv="refresh" content="0;url=https://github.com/nvlabs/moderngpu">
   <title>Modern GPU</title>
   <link href="mgpu.css" rel="stylesheet" type="text/css" />
   <script src="syntaxhighlighter_3.0.83/scripts/shCore.js" type="text/javascript"></script>
@@ -26,12 +25,15 @@
 
 <a href="https://github.com/NVlabs/moderngpu"><img style="position: absolute; top: 0; right: 0; border: 0;" width="149" height="149" src="forkme_right_green_007200.png" alt="Fork me on GitHub" /></a>
 
+<h1>Modern GPU 2.0 now available</h1>
+<h3><a href="https://github.com/NVlabs/moderngpu">Code and docs on github</a></h3>
+<br/>
 <div class="copyright">
 <p><strong>&copy; 2013, NVIDIA CORPORATION. All rights reserved.</strong></p>
 <p>Code and text by <a href="https://twitter.com/moderngpu">Sean Baxter</a>, NVIDIA Research.</p>
 <p>(Click <a href="faq.html#license">here</a> for license. Click <a href="faq.html#contact">here</a> for contact information.)</p>
 </div><br />
-<h1>Modern GPU</h1>
+<h2>Modern GPU 1.0</h2>
 <p><em><strong>Modern GPU is code and commentary intended to promote new and productive ways
 of thinking about GPU computing.</strong></em></p>
 <p>This project is a<strong> library</strong>, an <strong>algorithms book</strong>, a <strong>tutorial</strong>, and a <strong>best-practices guide</strong>. If you are new to CUDA, start <a href="faq.html#gettingstarted">here</a>. If you're already familiar with CUDA, are ready for a challenge, and want to learn design patterns for parallel programming, enjoy this series.</p>
